2009-05-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update to Automake 1.11. Cleanup build system.
	
	* Makefile.am,
	* lib/Makefile.am,
	* demo/Makefile.am,
	* tests.mk: Simplify. Move generic rules to...
	* sl.mk: here.

	* Makefile-reqs.orig, 
	* bootstrap,	
	* configure.ac: Update for latest release of Automake, and enable
	silent rules.

	* Makefile.am,
	* bin/Makefile.am,
	* lib/mtalpha.mk,
	* lib/seqc.mk,
	* lib/ptl.mk,
	* sl.mk: Use prefixes to silence custom slc build rules.

	* demo/Makefile.am: Coalesce DEMOS, EXTRA_DEMOS and ALL_DEMOS
	since no distinction exists any more.

2009-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic changes. Reinstate support for compiling through the MG
	core compiler. Reinstate "xfail" tests.
	
	* tests/0_minimal/0_trivial/div.sl: Rename to...	
	* tests/1_basic/2_div/div3.sl: here, because div requires create
	and arguments.
	
	* bin/spp (pppalpha.create): 
	* lib/t-utc0/include/sl_support.h,
	* lib/t-pppalpha/include/sl_support.h,
	* tests/1_basic/3_args/gencall.py,		
	* tests/1_basic/2_div/div2.sl,
	* tests/1_basic/2_div/div3.sl: Use "long" instead of "long
	long" to simplify code since they are the same size on the Alpha.

	* include/svp/perf.slh,
	* include/climits.slh,
	* include/cstdint.slh,		
	* include/cstddef.slh: Test for __mtalpha__ in addition to
	__alpha__ to support the MG core compiler.

	* lib/t-utc0/slimpl.m4: Use m4_foreach instead of manual recursion
	to avoid issues with quoting. Check more for matching create/sync
	blocks, as with ptl and ppp.

	* lib/t-utc0/include/sl_support.h: Reinstate PLACE_LOCAL and
	PLACE_DEFAULT. 

	* lib/t-utc0/include/sl_support.h,
	* lib/t-pppalpha/include/sl_support.h: Use FP register for "breakf".

	* bin/spp (pppalpha.mapcall): Add warnings when arguments are
	passed using memory.
	
	* demo/Makefile.am: Compile with CFLAGS and CXXFLAGS which can be
	overridden by configure.

	* configure.ac: Make checking of muTC-ptl optional.	